[package]
name = "xcloud"
version = "1.0.0"
edition = "2021"
include = ["LICENSE.md", "**/*.rs", "Cargo.toml"]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = " Cloud Backend Service for xCAD."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xCLOUD"
keywords = ["Produce at lightspeed"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://xodium.org/"
documentation = ""
publish = false

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.9"
fs_extra = "1.3"
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
] }
thiserror = "2.0.3"
bcrypt = "0.16.0"
